--- a/style/style.css
+++ b/style/style.css
@@ -1,117 +1,172 @@
+@import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  body {
-color: #ECD8E0;
+    font-family: "Host Grotesk", sans-serif;
+}
 
-  }
+html {
 
-  a {
+    scroll-behavior: smooth;
+
+}
+
+body {
     color: #ECD8E0;
+
+}
+
+/* Barra de navegação */
+.nav-list a {
     text-decoration: none;
-    transition: 0.3s;
-  }
-  
-  a:hover {
-    opacity: 0.1;
-  }
-  
-  .logo {
+    color: #ECD8E0;
+    font-size: 18px;
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.nav-list a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ECD8E0;
+    transition: width 0.3s ease;
+}
+
+.nav-list a:hover::after {
+    width: 100%;
+}
+
+a:hover {
+    opacity: 0.8;
+}
+
+
+.logo {
     text-transform: uppercase;
     letter-spacing: 4px;
     cursor: pointer;
-  }
-  
-  nav {
+}
+
+.logo :hover {
+
+    opacity: 0.6;
+    transition: 1s;
+
+}
+
+nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
     background: #771127;
     height: 8vh;
-  }
-  
-  main {
+}
+
+
+.login-button button {
+    border: none;
+    background-color: #ECD8E0;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.login-button button:hover {
+
+    opacity: 0.5;
+    transition: 1s;
+
+}
+
+main {
     background: #ECD8E0;
     background-size: cover;
     height: 92vh;
-  }
-  
-  .nav-list {
+}
+
+.nav-list {
     list-style: none;
     display: flex;
-  }
-  
-  .nav-list li {
+}
+
+.nav-list li {
     letter-spacing: 3px;
     margin-left: 32px;
-  }
-  
-  .mobile-menu {
+}
+
+.mobile-menu {
     display: none;
     cursor: pointer;
-  }
-  
-  .mobile-menu div {
+}
+
+.mobile-menu div {
     width: 32px;
     height: 2px;
     background: #ECD8E0;
     margin: 8px;
     transition: 0.3s;
-  }
-  
-  @media (max-width: 999px) {
+}
+
+@media (max-width: 999px) {
     body {
-      overflow-x: hidden;
+        overflow-x: hidden;
     }
+
     .nav-list {
-      position: absolute;
-      top: 8vh;
-      right: 0;
-      width: 50vw;
-      height: 92vh;
-      background: #771127;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      transform: translateX(100%);
-      transition: transform 0.3s ease-in;
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        background: #771127;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
     }
+
     .nav-list li {
-      margin-left: 0;
-      color: #ECD8E0;
-   
+        margin-left: 0;
+        color: #ECD8E0;
+
     }
+
     .mobile-menu {
-      display: block;
+        display: block;
     }
-  }
-  
-  .nav-list.active {
+}
+
+.nav-list.active {
     transform: translateX(0);
-  }
-  
-  @keyframes navLinkFade {
+}
+
+@keyframes navLinkFade {
     from {
-      opacity: 0;
-      transform: translateX(50px);
+        opacity: 0;
+        transform: translateX(50px);
     }
+
     to {
-      opacity: 1s;
-      transform: translateX(0);
+        opacity: 1s;
+        transform: translateX(0);
     }
-  }
-  
-  .mobile-menu.active .line1 {
+}
+
+.mobile-menu.active .line1 {
     transform: rotate(-45deg) translate(-8px, 8px);
-  }
-  
-  .mobile-menu.active .line2 {
+}
+
+.mobile-menu.active .line2 {
     opacity: 0;
-  }
-  
-  .mobile-menu.active .line3 {
+}
+
+.mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
-  }
+}
