--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* ESTILO GERAL */
+:root {
+    --cor-primaria:#ECD8E0;
+}
 * {
     margin: 0;
     padding: 0;
@@ -299,4 +302,8 @@ section #topoDoSite {
 
 .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
+}
+
+.login_logo_position:last-child{
+    margin: 0 auto;
 }
