--- a/style/login.css
+++ b/style/login.css
@@ -147,16 +147,17 @@ div.login img.login_logo_logo {
     margin:10px;
 }
 
-.criar_conta button{
+.criar_conta a{
     background-color: transparent;
     color: #ECD8E0;
+    text-decoration: none;
     padding: 10px;
     border-radius: 7px;
     border: #ECD8E0 1px solid;
 
 }
 
-.criar_conta button:hover{
+.criar_conta a:hover{
     background-color: #ECD8E0;
     color: #771127;
 }
