--- a/style/login.css
+++ b/style/login.css
@@ -110,8 +110,9 @@ div.login img.login_logo_logo {
     margin-top: 10%;
     width: 30%;
     border-radius: 7px;
-    padding: 1rem;
-    width: 12rem;
+    padding: 0.75rem;
+    width: 10rem;
+    font-size: 1.1em;
 }
 
 .botao_acao:hover {
