Na pagina login, mudança no cadastro

--- a/style/cadastro.css
+++ b/style/cadastro.css
@@ -29,7 +29,7 @@ main {
 
 }
 .cadastro form{
-    background-color: aliceblue;
+    background-color: #ECD8E0;
     border: 1px solid  #771127;
     margin-top:20px !important;
     margin:2px;
