--- a/style/cadastro.css
+++ b/style/cadastro.css
@@ -16,30 +16,35 @@ main {
 }
 
 .cadastro{
-    max-width: 500px ;
+    max-width: 50rem ;
     width:100% ;
     display: flex;
     flex-direction: column;
-    margin-top: 30vh;
+    justify-content: center;
+
     background-color: #771127;
+    border-radius: 30px;
+    padding: 1.5rem;
 }
 .cadastro h2{
     color: #ECD8E0;
     
-
 }
-.cadastro form{
-    background-color: #ECD8E0;
-    border: 1px solid  #771127;
+
+.cadastro_form{
+   
     margin-top:20px !important;
-    margin:2px;
-    padding:5px;
+    margin:0.5em;
     gap:2px;
     display: flex;
     flex-direction: column;
-
+    color: #ECD8E0;
+    justify-content: center;
 }
 
+.cadastro_form input{
+    margin: 2% 0;
+}
 
 
 
