--- a/style/styleCalen.css
+++ b/style/styleCalen.css
@@ -1,6 +1,7 @@
 :root {
   --primary-clr: #b38add;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -557,4 +558,9 @@ body {
 }
 .credits a:hover {
   text-decoration: underline;
+}
+
+#sobreMim .interface {
+  display: flex;
+  align-items: center;
 }
