ajustei uma cor errada

--- a/style/styleCalen.css
+++ b/style/styleCalen.css
@@ -1,7 +1,7 @@
 :root {
   --primary-clr: #771127;
   --secundary-clr: #ECD8E0; 
-  --shadow-primary: #270008;
+  --shadow-primary: #3B0B19;
 }
 
 * {
